--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
   <meta name="keywords" content="">
   <link rel="canonical" href="http://spcmd.github.io/">
+  <link rel="icon" type="image/png" href="http://spcmd.github.io/favicon.png">
   
   
   <link rel="stylesheet" type="text/css" href="http://spcmd.github.io/css/basscss.css">
