fixed: pagination; updated: about page

--- a/about/index.html
+++ b/about/index.html
@@ -52,15 +52,14 @@
 <p><strong>System &amp; tools:</strong></p>
 
 <ul>
-<li>Arch Linux + Awesome WM</li>
-<li>Void Linux + Awesome WM</li>
-<li>Main Browser: Firefox</li>
-<li>Terminal: URxvt</li>
-<li>Shell: Zsh</li>
-<li>Text/Code Editor: Vim</li>
-<li>File Manager: ranger</li>
-<li>Mail Client: mutt</li>
-<li>RSS reader: newsbeuter</li>
+<li><strong>System:</strong> Arch Linux + awesome WM</li>
+<li><strong>Main Browser:</strong> Firefox + Vimperator</li>
+<li><strong>Terminal:</strong> URxvt</li>
+<li><strong>Shell:</strong> Zsh</li>
+<li><strong>Text/Code Editor:</strong> Vim</li>
+<li><strong>File Manager:</strong> ranger</li>
+<li><strong>Mail Client:</strong> mutt</li>
+<li><strong>RSS reader:</strong> newsbeuter</li>
 </ul>
 
       </article>
