cleanup: removed some obsolete posts

--- a/about/index.html
+++ b/about/index.html
@@ -52,8 +52,8 @@
 <p><strong>System &amp; tools:</strong></p>
 
 <ul>
-<li><strong>System:</strong> Arch Linux + awesome WM</li>
-<li><strong>Main Browser:</strong> Firefox + Vimperator</li>
+<li><strong>System:</strong> Arch Linux + bspwm (previously used awesome wm)</li>
+<li><strong>Main Browser:</strong> Luakit (previously used Firefox+Vimperator)</li>
 <li><strong>Terminal:</strong> URxvt</li>
 <li><strong>Shell:</strong> Zsh</li>
 <li><strong>Text/Code Editor:</strong> Vim</li>
