--- a/about/index.html
+++ b/about/index.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="">
   <link rel="canonical" href="http://spcmd.github.io/about/">
   <link rel="icon" type="image/png" href="http://spcmd.github.io/favicon.png">
-  
-  
+
+
   <link rel="stylesheet" type="text/css" href="http://spcmd.github.io/css/basscss.css">
   <link rel="stylesheet" type="text/css" href="http://spcmd.github.io/css/main.css">
 </head>
@@ -43,23 +43,22 @@
 
 <ul>
 <li><a href="https://github.com/spcmd">github</a></li>
-<li><a href="https://gist.github.com/spcmd">gist</a></li>
-<li><a href="https://www.reddit.com/user/spcmd/">reddit</a></li>
-<li><a href="http://logout.hu/blog/spammer/index.html">logout.hu</a></li>
-<li>spcmdgit [at] gmail [dot] com  (only for important cases please!)</li>
+<!--<li><a href="https://gist.github.com/spcmd">gist</a></li>-->
+<!--<li><a href="https://www.reddit.com/user/spcmd/">reddit</a></li>-->
+<!--<li><a href="http://logout.hu/blog/spammer/index.html">logout.hu</a></li>-->
 </ul>
 
 <p><strong>System &amp; tools:</strong></p>
 
 <ul>
-<li><strong>System:</strong> Arch Linux + bspwm (previously used awesome wm)</li>
-<li><strong>Main Browser:</strong> Luakit (previously used Firefox+Vimperator)</li>
+<li><strong>System:</strong> Arch Linux + i3 (previously used awesome wm and bspwm)</li>
+<li><strong>Main Browser:</strong>Firefox and Chrome with Vimium</li>
 <li><strong>Terminal:</strong> URxvt</li>
 <li><strong>Shell:</strong> Zsh</li>
 <li><strong>Text/Code Editor:</strong> Vim</li>
 <li><strong>File Manager:</strong> ranger</li>
 <li><strong>Mail Client:</strong> mutt</li>
-<li><strong>RSS reader:</strong> newsbeuter</li>
+<li><strong>RSS reader:</strong> newsboat</li>
 </ul>
 
       </article>
